; ModuleID = '/home/carl/AnghaBench/esp-idf/components/efuse/src/esp32/extr_esp_efuse_fields.c_esp_efuse_disable_basic_rom_console.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/efuse/src/esp32/extr_esp_efuse_fields.c_esp_efuse_disable_basic_rom_console.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_EFUSE_CONSOLE_DEBUG_DISABLE = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"Disable BASIC ROM Console fallback via efuse...\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @esp_efuse_disable_basic_rom_console() #0 {
  %1 = alloca i64, align 8
  store i64 0, i64* %1, align 8
  %2 = load i32, i32* @ESP_EFUSE_CONSOLE_DEBUG_DISABLE, align 4
  %3 = call i32 @esp_efuse_read_field_blob(i32 %2, i64* %1, i32 1)
  %4 = load i64, i64* %1, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %0
  %7 = load i32, i32* @ESP_EFUSE_CONSOLE_DEBUG_DISABLE, align 4
  %8 = call i32 @esp_efuse_write_field_cnt(i32 %7, i32 1)
  %9 = load i32, i32* @TAG, align 4
  %10 = call i32 @ESP_EARLY_LOGI(i32 %9, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %6, %0
  ret void
}

declare dso_local i32 @esp_efuse_read_field_blob(i32, i64*, i32) #1

declare dso_local i32 @esp_efuse_write_field_cnt(i32, i32) #1

declare dso_local i32 @ESP_EARLY_LOGI(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
